2026-02-05T13:21:19Z:

2026-02-05T02:47:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21696793553 # 1422
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-05
* notice: last 14d: unq all: 11 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1339 6283 / 1354 6356
* notice: next accum: outdated-unq outdated-all / unq all: 1340 6284 / 1354 6356
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-20] / []

2026-02-04T13:19:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21672991482 # 1421
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 12 73
* notice: prev accum: outdated-unq outdated-all / unq all: 1337 6276 / 1354 6356
* notice: next accum: outdated-unq outdated-all / unq all: 1339 6283 / 1354 6356
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-19] / []

2026-02-04T02:44:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21656370298 # 1420
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 14 80
* notice: prev accum: outdated-unq outdated-all / unq all: 1337 6276 / 1352 6349
* notice: next accum: outdated-unq outdated-all / unq all: 1337 6276 / 1354 6356
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-03T13:19:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21631807727 # 1419