@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-05T02:47:00Z",
+  "timestamp" : "2026-02-06T00:55:42Z",
   "count_outdated" : 6284,
   "uniques_outdated" : 1340,
-  "count" : 6356,
-  "uniques" : 1354,
+  "count" : 6357,
+  "uniques" : 1355,
   "views" : [
-    {
-      "timestamp": "2026-01-21T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
     {
       "timestamp": "2026-01-22T00:00:00Z",
       "count": 0,
@@ -130,6 +121,15 @@
       "uniques": 0,
       "uniques_minmax": [ 0, 0 ],
       "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
