@@ -1,3 +1,12 @@
+2026-02-06T00:55:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21734552445 # 1424
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
+* notice: last 14d: unq all: 12 73
+* notice: prev accum: outdated-unq outdated-all / unq all: 1340 6284 / 1354 6356
+* notice: next accum: outdated-unq outdated-all / unq all: 1340 6284 / 1355 6357
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2026-01-21] / [2026-02-04]
+
 2026-02-05T13:21:19Z:
 
 2026-02-05T02:47:00Z:
